--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="image col-md-6">
-                    <img src="assets/architecture-6646154_1280.jpg" style="max-width: 40em;" alt="">
+                    <img src="assets/architecture-6646154_1280.jpg" style="max-width: 100%;" alt="">
                 </div>
             </section>
 
@@ -41,9 +41,9 @@
                         <div class="card col-md-6" style="display: flex; flex-direction: row;">
                             <i class="fa-solid fa-location-dot"></i>
                                 <div class="text-card">
-                                <h2>Fácil <a href=""></a>cesso</h2>
+                                <h2>Fácil acesso</h2>
                                 <p>Perto dos principais pontos turísticos</p>
-                            </div>
+                                </div>
                         </div>
                 </div>      
 
@@ -82,19 +82,21 @@
                         <label>Data de entrada:</label>
                         <input type="date" id="dataIn" name="dataIn">
                         <label>Observações:</label>
-                        <textarea name="obs" id="obs" cols="30" rows="10" style="height: 2em;"></textarea>
+                        <textarea name="obs" id="obs" cols="30" rows="10" style="height: 4em;"></textarea>
                     </div>
                     <div class="col-md-6" style="display: flex; flex-direction: column;">
                         <label for="email">E-mail:</label>
                         <input type="email" id="email" name="email">
                         <label for="dataOut">Data de saída:</label>
                         <input type="date" id="dataOut" name="dataOut">
-                        <div style="margin-top: 2em; margin-bottom: 1em;">
-                            <label for="adultos">Adultos:</label>
-                            <input type="number" id="adultos" name="adultos" style="width: 3em;">
+                        <div style="margin-top: 2em; margin-bottom: 1em; display: flex; justify-content: space-around;">
                             <div>
-                            <label for="criancas">Criancas:</label>
-                            <input type="number" id="criancas" name="criancas" style="width: 3em;">
+                                <label for="adultos">Adultos:</label>
+                                <input type="number" id="adultos" name="adultos" style="width: 3em;">
+                            </div>
+                            <div>
+                                <label for="criancas">Criancas:</label>
+                                <input type="number" id="criancas" name="criancas" style="width: 3em;">
                             </div>
                         </div>
                         <button>Enviar</button>
