--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
         <header class="header container-fluid">
             <i class="fa-solid fa-hotel"></i>
+            <a href="reservas.html" target="_self">
+                <i class="fa-solid fa-right-to-bracket"></i>
+            </a>
         </header>
 
         <main class="container">
