--- a/reservas.html
+++ b/reservas.html
@@ -13,6 +13,9 @@
 
         <header class="header container-fluid">
             <i class="fa-solid fa-hotel"></i>
+            <a href="index.html">
+              <i class="fa-solid fa-arrow-left"></i>
+            </a>
         </header>
 
         <main class="list">
