--- a/reservas.html
+++ b/reservas.html
@@ -22,50 +22,11 @@
 
           <h1>Solicitações de reserva:</h1>
 
-            <div class="reserva">
-              <div style="width: 80%">
-                <h2 class="nome-cliente" name="nome">Lamanna Bryan</h2>
-                <div style="display: flex;">
-                  <div>
-                    <label>Data de entrada:</label>
-                    <p name="dataIn" class="dataIn">23/04/2562</p>
-                  </div>
-                  <div  style="margin-left: 1em;">  
-                    <label>E-mail</label>
-                    <p class="email">lamannabryan@gmail.com</p>
-                  </div>  
-                </div>  
-                <label>Observações:</label>
-                <p style="width: 80%;" nome="obs" class="obs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum in porro recusandae nobis</p>
-              </div> 
-              <div>
-                <label>Data de saida:</label>
-                <p class="dataOut">24/05/2004</p>
-                <label>Qtd. de adultos:</label>
-                <p class="qtAdulto">04</p>
-                <label>Qtd. de criancas:</label>
-                <p class="qtCrianca">01</p>
-              </div>
-            </div>
-            <div class="reserva">
-              <h2 class="nome-cliente"></h2>
-              <p class="dataIn"></p>
-              <p class="obs"></p>
-              <p class="email"></p>
-              <p class="dataOut"></p>
-              <p class="qtAdulto"></p>
-              <p class="qtCrianca"></p>
-            </div>
-            <div class="reserva">
-              <h2 class="nome-cliente"></h2>
-              <p class="dataIn"></p>
-              <p class="obs"></p>
-              <p class="email"></p>
-              <p class="dataOut"></p>
-              <p class="qtAdulto"></p>
-              <p class="qtCrianca"></p>
-            </div>
+          <div id="reservas"></div>
+
         </main>
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script> 
+    <script src="script.js"></script>
+    <script src="reservas.js"></script>
     </body> 
 </html>
